// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`meter > render with  1`] = `
<DocumentFragment>
  .emotion-0 {
  float: right;
  vertical-align: top;
  color: #b3144d;
}

.emotion-2 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="0"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-0 emotion-1 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          veryWeak
        </span>
      </p>
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          style="background-color: rgb(179, 20, 77); width: 20%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with medium password 1`] = `
<DocumentFragment>
  .emotion-0 {
  float: right;
  vertical-align: top;
  color: yellow;
}

.emotion-2 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="2"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-0 emotion-1 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          medium
        </span>
      </p>
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          style="background-color: yellow; width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with strong value 1`] = `
<DocumentFragment>
  .emotion-0 {
  float: right;
  vertical-align: top;
  color: #22674e;
}

.emotion-2 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="3"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-0 emotion-1 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          strong
        </span>
      </p>
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          style="background-color: rgb(34, 103, 78); width: 80%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with very strong value 1`] = `
<DocumentFragment>
  .emotion-0 {
  float: right;
  vertical-align: top;
  color: #22674e;
}

.emotion-2 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="4"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-0 emotion-1 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          veryStrong
        </span>
      </p>
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          style="background-color: rgb(34, 103, 78); width: 100%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with weak value 1`] = `
<DocumentFragment>
  .emotion-0 {
  float: right;
  vertical-align: top;
  color: #7c5400;
}

.emotion-2 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="1"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-0 emotion-1 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          weak
        </span>
      </p>
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
          style="background-color: rgb(124, 84, 0); width: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
